# competitive_programming

./: CMakeLists.txt  main.cpp  test
Easy/: UVa_10300.cpp  UVa_11332.cpp  UVa_11559.cpp  UVa_11679.cpp  UVa_11764.cpp  UVa_11799.cpp  UVa_11942.cpp  UVa_12015.cpp  UVa_12157.cpp  UVa_12468.cpp  UVa_12503.cpp  UVa_621.cpp
Medium/: UVa_10141_Inspection.cpp  UVa_10324.cpp  UVa_10424_Inspection.cpp  UVa_10919.cpp  UVa_11661.cpp  UVa_11687.cpp  UVa_11956.cpp  UVa_573.cpp  UVa_661.cpp
Super Easy/: UVa_11044.cpp  UVa_11172.cpp  UVa_1124.cpp  UVa_11364.cpp  UVa_11498.cpp  UVa_11547.cpp  UVa_11727.cpp  UVa_12250.cpp  UVa_12279.cpp  UVa_12289.cpp  UVa_12372.cpp  UVa_12403.cpp  UVa_12577.cpp  UVa_272.cpp
