cmake_minimum_required(VERSION 3.16)
project(CompetitiveProgramming)

set(CMAKE_CXX_STANDARD 14)

add_executable(CompetitiveProgramming main.cpp "Super Easy/UVa_272.cpp" "Super Easy/UVa_1124.cpp" "Super Easy/UVa_11044.cpp" "Super Easy/UVa_11172.cpp" "Super Easy/UVa_11364.cpp" "Super Easy/UVa_11498.cpp" "Super Easy/UVa_11547.cpp" "Super Easy/UVa_11727.cpp" "Super Easy/UVa_12250.cpp" "Super Easy/UVa_12279.cpp" "Super Easy/UVa_12289.cpp" "Super Easy/UVa_12372.cpp" "Super Easy/UVa_12403.cpp" "Super Easy/UVa_12577.cpp" Easy/UVa_621.cpp Easy/UVa_10300.cpp Easy/UVa_11332.cpp)